[package]
name = "blender_ramen"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4", "fast-rng"] }
ramen_macros = { path = "ramen_macros" }

[build-dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.106"
quote = "1.0.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.117", features = ["parsing"] }

[workspace]
members = [
    ".",
    "ramen_macros"
]
